cluster/apps/pgadmin4/pgadmin4.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgadmin4
  namespace: pgadmin4
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: pgadmin4
  template:
    metadata:
      labels:
        app: pgadmin4
    spec:
      containers:
        - name: pgadmin4
          image: dpage/pgadmin4:9.13.0@sha256:d243a4bcc02d2ee6b447c601692813531d2d0fbca18b583d9f7f9658da835d81
          ports:
            - containerPort: 80
          volumeMounts:
            - name: config
              mountPath: /var/lib/pgadmin
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: pgadmin4-config-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: pgadmin4
  namespace: pgadmin4
spec:
  type: ClusterIP
  ports:
    - name: http
      targetPort: 80
      port: 80
      protocol: TCP
  selector:
    app: pgadmin4
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pgadmin4
  namespace: pgadmin4
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    cert-manager.io/private-key-algorithm: RSA
    cert-manager.io/private-key-size: 4096
    cert-manager.io/private-key-rotation-policy: Always
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
    - host: pgadmin4.${SECRET_INTERNAL_DOMAIN_NAME}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pgadmin4
                port:
                  number: 80
  tls:
    - hosts:
        - pgadmin4.${SECRET_INTERNAL_DOMAIN_NAME}
      secretName: pgadmin4-tls
